icons niche emojigs

--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -8,12 +8,12 @@
   <div class="d-flex">
    <!-- <a href="#" class="text-white me-3">Cita Comercial</a>
    -->
-      <a href="#" class="text-white me-3">Anunciarse</a>
+      <a href="#" class="text-white me-3">📢 Anunciarse</a>
 
     </div>
   <div class="d-flex">
-    <a href="#" class="text-white me-3">Comunicados</a>
-    <a href="#" class="text-white">Atención al cliente</a>
+    <a href="#" class="text-white me-3">🗞️ Comunicados</a>
+    <a href="#" class="text-white">💬 Atención al cliente</a>
   </div>
 </div>
 
@@ -35,54 +35,51 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="aboutUsDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            Ayuda
+            ❓Ayuda
           </a>
           <ul class="dropdown-menu" aria-labelledby="aboutUsDropdown">
             <div class="dropdown-menu-columns">
-              <div class="column">
-                <h6 class="dropdown-header">Moonitor</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-globe"></i> Anuncios</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-globe"></i> Historia</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Casos Reales</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Partners</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Soporte</a>
-           
-                   </div>
-              <div class="column">
-                <h6 class="dropdown-header">Planes y Precios</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Plan Estudiante</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-globe"></i> Plan Profesional</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Plan Agencia</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Plan Corporate</a>
-              
-            
-                <h6 class="dropdown-header">Clientes</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> Estudiantes </a>
-                <a class="dropdown-item" href="#"><i class="fas fa-globe"></i> Profesionales / PYMES </a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Agencias</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Corporativos</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Admon. Pública</a>
-              </div>
-              <div class="column">
-                <h6 class="dropdown-header">Recursos</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-globe"></i> Blog</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Guías</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Nomenclatura</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Centro de Ayuda</a>
-          
-                <h6 class="dropdown-header">Disclaimer</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-lock"></i> Aviso Legal</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-info"></i> Términos de uso</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-sitemap"></i> Privacidad y Cookies</a>   
-                <a class="dropdown-item" href="#"><i class="fas fa-lock"></i> Seguridad</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-sitemap"></i> Descargo Responsabilidad</a>       
-              </div>
-              <div class="column full-width">
-                <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Contactar con ventas </a>
-              </div>
-
+                <div class="column">
+                    <h6 class="dropdown-header">Moonitor</h6>
+                    <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Anuncios</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-history"></i> Historia</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-briefcase"></i> Casos Reales</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-handshake"></i> Partners</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Soporte</a>
+                </div>
+                <div class="column">
+                    <h6 class="dropdown-header">Planes y Precios 💰</h6>
+                    <a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Plan Estudiante</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-briefcase"></i> Plan Profesional</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-building"></i> Plan Agencia</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-suitcase"></i> Plan Corporate</a>
+    
+                    <h6 class="dropdown-header">Clientes 👥</h6>
+                    <a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Estudiantes</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-user-tie"></i> Profesionales / PYMES</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-handshake"></i> Agencias</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-building"></i> Corporativos</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-university"></i> Admon. Pública</a>
+                </div>
+                <div class="column">
+                    <h6 class="dropdown-header">Recursos 🛠️</h6>
+                    <a class="dropdown-item" href="#"><i class="fas fa-blog"></i> Blog</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-book-open"></i> Guías</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Nomenclatura</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> Centro de Ayuda</a>
+    
+                    <h6 class="dropdown-header">Disclaimer ⚖️</h6>
+                    <a class="dropdown-item" href="#"><i class="fas fa-gavel"></i> Aviso Legal</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-file-contract"></i> Términos de uso</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-user-secret"></i> Privacidad y Cookies</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> Seguridad</a>
+                    <a class="dropdown-item" href="#"><i class="fas fa-exclamation-triangle"></i> Descargo Responsabilidad</a>
+                </div>
+                <div class="column full-width">
+                    <a class="dropdown-item" href="#"><i class="fas fa-envelope"></i> Contactar con ventas</a>
+                </div>
             </div>
-          </ul>
+        </ul>
         </li>
 
 
@@ -90,12 +87,12 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            Dominios & Correo
+            📬 Dominios & Correo
           </a>
           <ul class="dropdown-menu" aria-labelledby="domainDnsDropdown">
             <div class="dropdown-menu-columns">
               <div class="column">
-                <h6 class="dropdown-header">Domain Information</h6>
+                <h6 class="dropdown-header">Domain Information 🔍</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> WHOIS</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-globe"></i> Reverse Domain</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> CNAME</a>
@@ -103,13 +100,13 @@
                 <a class="dropdown-item" href="#"><i class="fas fa-link"></i> AAAA Lookup</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-route"></i> Traceroute</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-network-wired"></i> Nmap</a>
-                <h6 class="dropdown-header">SpamLists Check</h6>
+                <h6 class="dropdown-header">SpamLists Check 📛</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-ban"></i> Blacklist</a>
 
 
               </div>
               <div class="column">
-                <h6 class="dropdown-header">Mail Server</h6>
+                <h6 class="dropdown-header">Mail Server 📬</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-server"></i> MX Discover</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-envelope-open"></i> DMARC</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> SPF Lookup</a>
@@ -121,7 +118,7 @@
 
               </div>
               <div class="column">
-                <h6 class="dropdown-header">DNS Lookup</h6>
+                <h6 class="dropdown-header">DNS Lookup 🌐</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-info"></i> SOA Lookup</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-sitemap"></i> ASN Lookup</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-database"></i> ARIN Lookup</a>
@@ -143,12 +140,12 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="accessibilityDropdown" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
-            Accesibilidad
+            ♿ Accesibilidad
           </a>
           <ul class="dropdown-menu" aria-labelledby="accessibilityDropdown">
             <div class="dropdown-menu-columns">
               <div class="column">
-                <h6 class="dropdown-header">Accessibility</h6>
+                <h6 class="dropdown-header">Accessibility ♿</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-universal-access"></i> WCAG-AA/AAA</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-spell-check"></i> Ortografia</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-tachometer-alt"></i> Velocidad (Speed)</a>
@@ -156,16 +153,16 @@
                 <a class="dropdown-item" href="#"><i class="fas fa-mobile-alt"></i> Responsive</a>
               </div>
               <div class="column">
-                <h6 class="dropdown-header">Image Optimization</h6>
+                <h6 class="dropdown-header">Image Optimization 🖼️</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-image"></i> Images</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-clock"></i> Lazy Loading Images</a>
-                <h6 class="dropdown-header">Mobile Optimization</h6>
+                <h6 class="dropdown-header">Mobile Optimization 📱</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-mobile"></i> AMP Valid Page</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-mobile-alt"></i> Mobile Audit</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-mobile"></i> Mobile_audit_Results</a>
               </div>
               <div class="column">
-                <h6 class="dropdown-header">Usability</h6>
+                <h6 class="dropdown-header">Usability 🧭</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-star"></i> Favicon Missing</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-bolt"></i> Flash Used</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-times"></i> X Card Tag Missing</a>
@@ -182,12 +179,12 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="seoOptimizationDropdown" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
-            SEO
+            🔍 SEO
           </a>
           <ul class="dropdown-menu" aria-labelledby="seoOptimizationDropdown">
             <div class="dropdown-menu-columns">
               <div class="column">
-                <h6 class="dropdown-header">On-Page SEO</h6>
+                <h6 class="dropdown-header">On-Page SEO 📝</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-heading"></i> Títulos (Titles)</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-clipboard"></i> Meta Description</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-key"></i> Meta Keywords</a>
@@ -203,7 +200,7 @@
 
               </div>
               <div class="column">
-                <h6 class="dropdown-header">Crawling & Link</h6>
+                <h6 class="dropdown-header">Crawling & Linking 🕷️</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-robot"></i> robots.txt</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-sitemap"></i> Sitemap</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-unlink"></i> Enlaces Rotos (Broken Links)</a>
@@ -212,13 +209,13 @@
                 <a class="dropdown-item" href="#"><i class="fas fa-link"></i> Backlinks</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-external-link-alt"></i> External Links</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-link"></i> Internal Links</a>
-                <h6 class="dropdown-header">HTML/CSS Compliance</h6>
+                <h6 class="dropdown-header">HTML/CSS Compliance 🖥️</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-code"></i>CSS Issues</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-exclamation-triangle"></i> Deprecated HTML Tags</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-compress"></i> Gzip Compression</a>
               </div>
               <div class="column">
-                <h6 class="dropdown-header">Website Security</h6>
+                <h6 class="dropdown-header">Website Security 🛡️</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> X-Tags</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> Header Info</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-lock"></i> HTTPS/SSL</a>
@@ -226,7 +223,7 @@
                 <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> Security_Info</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-exchange-alt"></i> Canonical HTTPS to HTTP</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-exchange-alt"></i> HTTP to HTTPS Redirect</a>
-                <h6 class="dropdown-header">Localization</h6>
+                <h6 class="dropdown-header">Localization 📍</h6>
                 <a class="dropdown-item" href="#"><i class="fas fa-code"></i> Invalid hreflang attribute</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-language"></i> Multiple language codes</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-code"></i> Invalid HTML lang attribute</a>
@@ -242,12 +239,12 @@
     
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="securityComplianceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Informes
+              📊 Informes
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityComplianceDropdown">
                 <div class="dropdown-menu-columns">
                     <div class="column">
-                      <h6 class="dropdown-header">Técnicos</h6>
+                      <h6 class="dropdown-header">Técnicos 🧪</h6>
                       <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Salud del Dominio</a>
                       <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Reputación email</a>
                       <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Auditoria Seguridad</a>
@@ -255,13 +252,13 @@
                       
                     </div>
                     <div class="column">
-                      <h6 class="dropdown-header">Marketing</h6>
+                      <h6 class="dropdown-header">Marketing 📊</h6>
                       <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Auditoria SEO</a>
                       <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Posicionamiento</a>
                       <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Competencia</a>   
                     </div>
                     <div class="column">
-                      <h6 class="dropdown-header">Comerciales</h6>
+                      <h6 class="dropdown-header">Comerciales 📈</h6>
                      
                     </div>
                     
@@ -295,12 +292,12 @@
              <span class="nav-item dropdown">
               <a class="btn btn-outline-primary me-2 ms-1 dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                <i class="fa-solid fa-folder"></i>&nbsp;<span class="item-responsive">Mis Sitios<i class="fa-solid fa-chevron"></i></span>
+                <i class="fa-solid fa-folder"></i>&nbsp;<span class="item-responsive">🌐 Mis Sitios<i class="fa-solid fa-chevron"></i></span>
     
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 
-                <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('profile') }}">👤 Mi perfil</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
     
