--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,7 @@
     }
 
     .info-bar {
-        background-color:var(--info-color);
+        background-color:var(--secondary-color);
         color:var(--white);
     }
     .navbar {
